[package]
name = "futures-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
lazy_static = "1.4.0"
mio = { version = "0.8.6", features = ["os-poll", "net"] }
once_cell = "1.17.1"
