[package]
name = "futures-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
fern = "0.6.1"
futures = "0.3.26"
lazy_static = "1.4.0"
log = "0.4.17"
mio = { version = "0.8.6", features = ["os-poll", "net"] }
once_cell = "1.17.1"
rand = "0.8.5"
